@@ -1,3 +1,8 @@
+Wed Jul 31 15:16:14 2002  Nick Burrett  <nick@dsvr.net>
+
+	* unix/unix.c (check_io_redir): Cope with [fd]>>.
+	(get_io_redir): Likewise.
+	
 Fri Jul 26 13:32:38 2002  Nick Burrett  <nick@dsvr.net>
 
 	* stdint.h: Add missing #endif
